# AgriMarket

./: .coverage  CommodityAndCommodityHeadsv2.csv  README.md  main.py  pyproject.toml  script.py  test_main.py
agrimarket/: __init__.py  scraper.py
data/: Agri_Data_Maize_Jan_2020.csv  Agri_Data_Wheat_Jan_2020.csv  Commodity.csv  Dates.csv
src/agrimarket/: scraper.py
tests/: test_scraper.py
tests/__pycache__/: test_scraper.cpython-312-pytest-8.3.5.pyc.23952
