[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agrimarket"
version = "0.1.0"
description = "A web scraping tool for agricultural market data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/agrimarket"

[tool.ruff]
line-length = 88
target-version = "py38"
lint.select = ["E", "F", "I", "N", "W"]
lint.ignore = []
